--- a/packus/web/templates/base.html
+++ b/packus/web/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <title>
-    {% block title %}테스트{% endblock %}
+    {% block title %}패커스 대시보드{% endblock %}
   </title>
   {% endblock %}
 </head>
