--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -11,7 +11,10 @@
                 <span class="navbar-toggler-bar bar3"></span>
               </button>
             </div>
-            <a class="navbar-brand" href="javascript:;">패커스 전체회원</a>
+            <h5 class="p-0 m-0 navbar-brand">패커스 전체회원&nbsp;
+              <small class="text-muted">분석 데이터: 2017년 ~ 2020년 8월</small>
+            </h5>
+            <!-- <a class="navbar-brand" href="javascript:;">패커스 전체회원</a> -->
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -29,7 +32,7 @@
                 <p class="m-0" style="font-size: 16px;">전체 회원 수</p>
               </div>
               <div class="card-body p-0 m-0 countCardBody">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/6ba665d0-d84d-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;" id="allMember"></iframe>
+                <iframe src="https://52.78.186.240/s/packus/app/kibana#/dashboard/6ba665d0-d84d-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;" id="allMember"></iframe>
               </div>
             </div>
           </div>
@@ -39,7 +42,7 @@
                 <p class="m-0" style="font-size: 16px;">구매이력이 있는 회원 수</p>
               </div>
               <div class="card-body p-0 m-0 countCardBody">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/e4db1dd0-d850-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                <iframe src="https://52.78.186.240/s/packus/app/kibana#/dashboard/e4db1dd0-d850-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
               </div>
             </div>
           </div>
@@ -47,7 +50,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="card ">
-                <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%" style="border-radius: .8rem;"></iframe>
+                <iframe frameborder="0" src="http://52.78.186.240/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%" style="border-radius: .8rem;"></iframe>
             </div>
         </div>
       </div>
