--- a/packus/web/templates/rfm/model.html
+++ b/packus/web/templates/rfm/model.html
@@ -11,7 +11,9 @@
                 <span class="navbar-toggler-bar bar3"></span>
               </button>
             </div>
-            <a class="navbar-brand" href="javascript:;">패커스 RFM 모델</a>
+            <h5 class="p-0 m-0 navbar-brand">패커스 RFM 모델&nbsp;
+              <small class="text-muted">분석 데이터: 2017년 ~ 2020년 8월</small>
+            </h5>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
