--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -141,7 +141,7 @@
                         class="active"
                       {% endif %}
                     >
-                    <a href="/event/ad/shop" class="p-0 mt-0">―   언택트 장보기<span class="sub_icon fa fa-hdd-o"></span></a>
+                    <a href="/event/shop" class="p-0 mt-0">―   언택트 장보기<span class="sub_icon fa fa-hdd-o"></span></a>
                   </li>
                 </ul>
               </li>
